CEA base style guide and getting correct alignwide and alignfull for gutenberg block elements

--- a/sass/theme/_theme_variables.scss
+++ b/sass/theme/_theme_variables.scss
@@ -1,13 +1,13 @@
 // cortextoo
 // Just copy a variable from src/sass/bootstrap4/_variables.scss, paste it here and edit the value.
-:root {font-family: NiveauGroteskRegular, times, serif;}
+:root {font-family: Niveau-Grotesk, times, serif;}
 
 // Typography
-$headings-font-family: NiveauGroteskBold, 'helvetica neue', helvetica, sans-serif;
+$headings-font-family: Niveau-Grotesk, 'helvetica neue', helvetica, sans-serif;
 $headings-font-weight: 700;
 
-$font-family-sans-serif: NiveauGroteskRegular, sans-serif;
-$font-family-base: NiveauGroteskRegular, serif;
+$font-family-sans-serif: Niveau-Grotesk, sans-serif;
+$font-family-base: Niveau-Grotesk, serif;
 
 $line-height-base: 2;
 
